# precommit-psycopg-bug

./: README.md  flake.nix  pyproject.toml
mypkg/: app.py
